--- a/slides/angulariscooler.html
+++ b/slides/angulariscooler.html
@@ -1,25 +1,6 @@
-<h2>AngularJS is cooler</h2>
+<h2>AngularJS is cooler <a href="examples/angular_is_cooler.html" target="_blank">(+)</a></h2>
 (with direct Node.js file access)
 
         <br /><br />
 
 &lt;myfiles&gt;&lt;/myfiles&gt;
-
-<pre>
-
-app.directive('myfiles', function () {
-    return {
-        restrict: 'E',
-        link: function (scope, element, attrs) {
-            var fs = require('fs');
-            fs.readdir('somedirectory', function (err, files) {
-                files.forEach( function (file) {
-                ... add to element HTML!
-       }
-     });
-   });
-});
-        }
-    }
-});
-</pre>
