--- a/slides/touchlesswithoutsensors.html
+++ b/slides/touchlesswithoutsensors.html
@@ -1,4 +1,4 @@
-<h2>...Even without special sensors</h2>
+<h2>...Even without special sensors <a href="examples/opencv.html">(+)</a></h2>
 
 <p><a href="https://www.npmjs.org/package/opencv">OpenCV for Node.js</a></p>
 
