--- a/slides/usingffmpeg.html
+++ b/slides/usingffmpeg.html
@@ -3,9 +3,9 @@
 <p>FFMPEG is a complete, cross-platform solution to record, convert and stream audio and video. It includes libavcodec -
     the leading audio/video codec library.</p>
 
-<pre>
+<pre><code>
     var ffmpeg = require('ffmpeg-node'),
     ffmpeg.exec(["-i", infile, "-ab", "128k", outfile], onComplete);
-</pre>
+</code></pre>
 
 <p>(we're cheating and using an NPM module called ffmpeg-node)</p>
