--- a/slides/windowednode.html
+++ b/slides/windowednode.html
@@ -1,4 +1,4 @@
-<h2>Node.js in a Window!</h2>
+<h2>Node.js in a Window! <a href="examples/webgl.html">(+)</a></h2>
 
 <ul>
     <li><a href="https://www.npmjs.org/package/node-glfw">Node-GLFW</a> provides platform-independent access to windowing system and input devices</li>
