--- a/slides/makecoolstuff.html
+++ b/slides/makecoolstuff.html
@@ -1,4 +1,4 @@
 <h2>Go ahead and make some cool visual stuff</h2>
 
-<p>Try Express.js for your webserving needs, but just know that Node.js is much much bigger</p>
+<p>Try <a href="http://expressjs.com/">Express.js</a> for your webserving needs, but just know that Node.js is much much bigger</p>
 <img src="slides/images/express.jpg" />
