--- a/slides/darksideofnode.html
+++ b/slides/darksideofnode.html
@@ -3,6 +3,7 @@
 <ul>
     <li>Altruistic authors == questionable quality</li>
     <li>Authors care less about Windows</li>
-    <li>x86 vs x64 and node-gyp vs nw-gyp</li>
+    <li>x86 vs x64 and node-gyp vs nw-gyp (for Node-Webkit)</li>
     <li>Linked libraries and environmental vars</li>
+    <li>No Atom-Shell for Linux x86 32bit yet</li>
 </ul>
