--- a/slides/bluetoothexample.html
+++ b/slides/bluetoothexample.html
@@ -1,4 +1,4 @@
-<h2>No live BlE Example</h2>
+<h2>Working with BLE</h2>
 
 <ul>
     <li><a href="https://github.com/sandeepmistry/noble">Noble</a> works on OSX/Linux only</li>
