--- a/slides/johhnyfive.html
+++ b/slides/johhnyfive.html
@@ -1,4 +1,4 @@
-<h2>Johhny 5</h2>
+<h2>Johnny 5</h2>
 <ul>
     <li>Arduino Sketch lets you update your Arduino</li>
     <li>Sense things, make LEDs blink, etc</li>
