--- a/slides/physicalinteraction.html
+++ b/slides/physicalinteraction.html
@@ -8,4 +8,4 @@
 </ul>
 
 <br /><br />
-<iframe width="420" height="315" src="//www.youtube.com/embed/9pD9fZ17im0" frameborder="0" allowfullscreen></iframe>
+<iframe width="420" height="315" src="http://www.youtube.com/embed/9pD9fZ17im0" frameborder="0" allowfullscreen></iframe>
