--- a/slides/speechrecognition2.html
+++ b/slides/speechrecognition2.html
@@ -1,4 +1,4 @@
-<h2>Speech Recognition <a href="examples/makeitso.html">(+)</a> </h2>
+<h2>Speech Recognition <a href="examples/makeitso.html" target="_blank">(+)</a> </h2>
 
 <p>The basic plan...</p>
 
